--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@pancakeswap-libs/pancake-swap-core",
-  "description": "🎛 Core contracts for the pancake protocol",
+  "name": "@crocoswap-libs/croco-swap-core",
+  "description": "🎛 Core contracts for the croco protocol",
   "version": "0.1.0",
-  "homepage": "https://pancakeswap.finance",
+  "homepage": "https://crocoswap.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pancakeswap/pancake-swap-core.git"
+    "url": "https://github.com/crocoswap/croco-swap-core.git"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
@@ -43,8 +43,8 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "truffle-hdwallet-provider": "^1.0.17",
     "truffle": "^5.1.41",
-    "truffle-flattener": "^1.4.4"
+    "truffle-flattener": "^1.4.4",
+    "@truffle/hdwallet-provider": "^1.2.2"
   }
 }
